more fixes to responsiveness, also made changes to sidebar visibility for smaller screens

--- a/src/scss/components/_filter.scss
+++ b/src/scss/components/_filter.scss
@@ -1,5 +1,5 @@
 .filter {
-  margin: 20px 100px 20px 100px;
+  margin: 20px 80px;
 
   h2 {
     font-size: 32px;
@@ -9,6 +9,11 @@
   &__hashtag {
     display: flex;
     flex-direction: row;
+
+    @media only screen and (max-width: 600px) {
+      flex-direction: column;
+      align-items: flex-start;
+    }
 
     button {
       margin: 20px 20px 0 0;
@@ -20,5 +25,13 @@
 
   .active {
     background-color: var(--title-bg);
+  }
+
+  @media only screen and (max-width: 600px) {
+    margin: 0 40px 0 50px;
+  }
+
+  @media only screen and (max-width: 400px) {
+    margin: 0 20px 0 40px;
   }
 }
