--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -1,5 +1,5 @@
 .header {
-  padding: 40px 100px;
+  padding: 40px 80px;
   display: flex;
   height: 120px;
   background-color: var(--bg-color);
@@ -10,6 +10,11 @@
   &__left {
     display: flex;
     align-items: center;
+
+    @media only screen and (max-width: 600px) {
+      // flex-direction: column;
+      align-items: center;
+    }
   }
 
   button {
@@ -21,10 +26,16 @@
     border: 1px solid var(--main-gray);
     font-size: 28px;
     margin-right: 15px;
-    padding-bottom: 5px;
+    padding-bottom: 7px;
 
     &:hover {
       color: var(--main-white);
+    }
+
+    @media only screen and (max-width: 600px) {
+      height: 2rem;
+      width: 2rem;
+      // margin-bottom: 1rem;
     }
   }
 
@@ -42,6 +53,12 @@
     }
     @media only screen and (max-width: 1000px) {
       width: 10rem;
+    }
+
+    @media only screen and (max-width: 600px) {
+      margin: 0;
+      width: 5rem;
+      padding-left: 0.8rem;
     }
   }
 
@@ -76,6 +93,11 @@
       &:hover {
         cursor: pointer;
       }
+
+      @media only screen and (max-width: 600px) {
+        height: 3rem;
+        width: 3rem;
+      }
     }
 
     .bell:hover {
@@ -85,5 +107,13 @@
 
   .active {
     color: var(--main-white) !important;
+  }
+
+  @media only screen and (max-width: 600px) {
+    padding: 20px 40px 20px 50px;
+  }
+
+  @media only screen and (max-width: 400px) {
+    padding: 20px 10px 20px 40px;
   }
 }
