--- a/src/scss/components/_results.scss
+++ b/src/scss/components/_results.scss
@@ -4,7 +4,7 @@
   h4 {
     font-size: 24px;
     font-weight: 700;
-    margin-bottom: 16px;
+    margin-bottom: 25px;
   }
 
   &__grid {
@@ -31,5 +31,13 @@
     &__grid {
       grid-template-columns: repeat(1, 1fr);
     }
+  }
+
+  @media only screen and (max-width: 600px) {
+    margin: 30px 40px 30px 50px;
+  }
+
+  @media only screen and (max-width: 400px) {
+    margin: 30px 20px 30px 40px;
   }
 }
